--- a/src/main/resources/assets/examplemod/lang/en_us.json
+++ b/src/main/resources/assets/examplemod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
-  "item.examplemod.structuregel": "Structure Gel",
-  "block.examplemod.castlewall": "Castle Wall"
+  "item.examplemod.rubyingot":"Ruby",
+  "item.examplemod.blueingot":"Blue Ingot"
+
 }
